2010-06-17  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL, IS_EINVAL_EXTRA): extracted from
	finish_tty_output and force_tty_output
	(finish_tty_output, force_tty_output, clear_tty_output)
	(listen_handle): use IS_EINVAL
	Reported by José H. Espinosa <jose.h.espinosa@gmail.com>

2010-06-16  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): fix "make check | tee": redirect
	output under nohup because nohup only creates nohup.out if there
	is no redirection

2010-06-16  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (LIBTOOL_VERSION): bump to 2.2.8
	(GNULIB_MODULES): remove obsolete modules memmove & memcmp
	(build-aux-update): also get ltoptions ltsugar ltversion lt~obsolete
	* configure.in: add AC_CONFIG_MACRO_DIR([m4]) for libtoolize
	* modules/syscalls/glm4/sockpfaf.m4, build-aux/config.sub: update

2010-06-16  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.48++ (2010-06-16)

2010-06-16  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib): hln merges pathnames, which means that if the
	source pathname is absolute, the destination must be absolute as well

2010-06-15  Sam Steingold  <sds@gnu.org>

	Try to flush buffers even if CLOSE was called with :ABORT T.
	this partially reverts patch 2010-02-25 and fixes bug#3014919
	* stream.d (handle_close_errors, MAYBE_IGNORE_ERRORS): add
	(close_str_in, close_buff_in): do not accept unused abort arg
	(builtin_stream_close): do not pass abort to them
	(close_buff_out, close_generic, close_ochannel, close_buffered):
	use MAYBE_IGNORE_ERRORS around calls which may signal errors
	(oconv_unshift_output_buffered): accept abort arg
	* constobj.d (handler_for_error): add
	* lispbibl.d (clisp_thread_t) [MULTITHREAD]: add
	_running_handle_close_errors
	(running_handle_close_errors) [MULTITHREAD]: define
	* makemake.in (check-script): test for bug#3014919

2010-06-15  Sam Steingold  <sds@gnu.org>

	* pathname.d (handle_directory_encoding_error): use unwind_upto
	instead of a home-brewed concoction
