@@ -391,7 +391,7 @@ gnulib-imported : update-gnulib force
 		$(GNULIB_COMMON) | tee -a $(GNULIB_IMPORTED_LOG)
 	$(GNULIB_TOOL) --source-base=modules/syscalls/gllib \
 		--macro-prefix=sc_gl --m4-base=modules/syscalls/glm4 \
-		$(GNULIB_AVOID) mktime strftime strptime uname \
+		$(GNULIB_AVOID) mktime strftime strptime strverscmp uname \
 		| tee -a $(GNULIB_IMPORTED_LOG)
 	$(GNULIB_TOOL) --source-base=modules/regexp/gllib \
 		--macro-prefix=rx_gl --m4-base=modules/regexp/glm4 \
