@@ -55,6 +55,9 @@ AC_FUNC_CHOWN
 gl_FUNC_MKTIME
 gl_FUNC_GNU_STRFTIME
 gl_FUNC_STRPTIME
+gl_TIME_MODULE_INDICATOR([strptime])
+gl_FUNC_STRVERSCMP
+gl_STRING_MODULE_INDICATOR([strverscmp])
 gl_FUNC_UNAME
 gl_SYS_UTSNAME_MODULE_INDICATOR([uname])
 AC_CHECK_DECLS([signgam],,,[#include <math.h>])
